--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
+    "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.26.2",
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
+    "tailwindcss": "^4.1.17",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
